feat: roomId 제거 테스트 수정